syntax = "proto3";

package ir.sndu;

option java_package = "ir.sndu.struct";

option (scalapb.options) = {
    single_file: true
    flat_package: true
    primitive_wrappers: true
    preamble: "trait GroupCommand"
    preamble: "trait GroupQuery"
};

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";
import "api/group.proto";

message GroupCommands {

    message Create {
        option (scalapb.message).extends = "GroupCommand";

        ApiGroupType typ = 2;
        int32 creator_user_id = 3;
        int64 creator_auth_id = 4;
        string title = 5;
        int64 random_id = 6;
        repeated int32 user_ids = 7;
    }

    message CreateAck {
        int64 access_hash = 1;
    }


    message DeleteGroup {
        option (scalapb.message).extends = "GroupCommand";

        int32 client_user_id = 2;
        int64 client_auth_id = 3;
    }

    message Invite {
        option (scalapb.message).extends = "GroupCommand";

        int32 invitee_user_id = 2;
        int32 inviter_user_id = 3;
        int64 inviter_auth_id = 4;
        int64 random_id = 5;
    }

    message Kick {
        option (scalapb.message).extends = "GroupCommand";

        int32 kicked_user_id = 2;
        int32 kicker_user_id = 3;
        int64 kicker_auth_id = 4;
        int64 random_id = 5;
    }

}
